WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130193
Fix the !ENABLE(SVG_FONTS) build
https://bugs.webkit.org/show_bug.cgi?id=130193
Summary
Fix the !ENABLE(SVG_FONTS) build
Zsolt Borbely
Reported
2014-03-13 07:15:35 PDT
tested on
r165529
: Tools/Scripts/build-webkit --efl --no-svg-fonts build log: ... Linking CXX shared library ../../lib/libewebkit2.so ../../lib/../Source/WebCore/CMakeFiles/WebCore.dir/rendering/InlineTextBox.cpp.o: In function `WebCore::InlineTextBox::constructTextRun(WebCore::RenderStyle const&, WebCore::Font const&, WTF::String, int, WebCore::BufferForAppendingHyphen*) const': InlineTextBox.cpp:(.text._ZNK7WebCore13InlineTextBox16constructTextRunERKNS_11RenderStyleERKNS_4FontEN3WTF6StringEiPNS_24BufferForAppendingHyphenE+0x3d9): undefined reference to `vtable for WebCore::SVGTextRunRenderingContext' ../../lib/../Source/WebCore/CMakeFiles/WebCore.dir/rendering/RenderBlock.cpp.o: In function `WebCore::TextRun WebCore::constructTextRunInternal<unsigned char>(WebCore::RenderObject*, WebCore::Font const&, unsigned char const*, int, WebCore::RenderStyle const&, unsigned int)': RenderBlock.cpp:(.text._ZN7WebCoreL24constructTextRunInternalIhEENS_7TextRunEPNS_12RenderObjectERKNS_4FontEPKT_iRKNS_11RenderStyleEj+0xcd): undefined reference to `vtable for WebCore::SVGTextRunRenderingContext' ../../lib/../Source/WebCore/CMakeFiles/WebCore.dir/rendering/RenderBlock.cpp.o: In function `WebCore::TextRun WebCore::constructTextRunInternal<unsigned short>(WebCore::RenderObject*, WebCore::Font const&, unsigned short const*, int, WebCore::RenderStyle const&, unsigned int)': RenderBlock.cpp:(.text._ZN7WebCoreL24constructTextRunInternalItEENS_7TextRunEPNS_12RenderObjectERKNS_4FontEPKT_iRKNS_11RenderStyleEj+0xcd): undefined reference to `vtable for WebCore::SVGTextRunRenderingContext' ../../lib/../Source/WebCore/CMakeFiles/WebCore.dir/rendering/RenderBlock.cpp.o: In function `WebCore::RenderBlock::constructTextRun(WebCore::RenderObject*, WebCore::Font const&, WTF::String const&, WebCore::RenderStyle const&, unsigned int, unsigned int)': RenderBlock.cpp:(.text._ZN7WebCore11RenderBlock16constructTextRunEPNS_12RenderObjectERKNS_4FontERKN3WTF6StringERKNS_11RenderStyleEjj+0x27d): undefined reference to `vtable for WebCore::SVGTextRunRenderingContext' ../../lib/../Source/WebCore/CMakeFiles/WebCore.dir/rendering/RenderBlock.cpp.o: In function `WebCore::RenderBlock::constructTextRun(WebCore::RenderObject*, WebCore::Font const&, unsigned short const*, int, WebCore::RenderStyle const&, unsigned int)': RenderBlock.cpp:(.text._ZN7WebCore11RenderBlock16constructTextRunEPNS_12RenderObjectERKNS_4FontEPKtiRKNS_11RenderStyleEj+0xcd): undefined reference to `vtable for WebCore::SVGTextRunRenderingContext' ../../lib/../Source/WebCore/CMakeFiles/WebCore.dir/rendering/svg/SVGInlineTextBox.cpp.o:SVGInlineTextBox.cpp:(.text._ZNK7WebCore16SVGInlineTextBox16constructTextRunEPNS_11RenderStyleERKNS_15SVGTextFragmentE+0x171): more undefined references to `vtable for WebCore::SVGTextRunRenderingContext' follow collect2: error: ld returned 1 exit status make[2]: *** [lib/libewebkit2.so.0.1.0] Error 1 make[1]: *** [Source/WebKit2/CMakeFiles/WebKit2.dir/all] Error 2 make: *** [all] Error 2 Reason: When SVG_FONTS disabled, the virtual createGlyphToPathTranslator() function there is not defined, we get linker errors.
Attachments
Proposed patch
(2.57 KB, patch)
2014-03-13 07:18 PDT
,
Zsolt Borbely
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zsolt Borbely
Comment 1
2014-03-13 07:18:31 PDT
Created
attachment 226591
[details]
Proposed patch
WebKit Commit Bot
Comment 2
2014-03-14 03:13:22 PDT
Comment on
attachment 226591
[details]
Proposed patch Clearing flags on attachment: 226591 Committed
r165611
: <
http://trac.webkit.org/changeset/165611
>
WebKit Commit Bot
Comment 3
2014-03-14 03:13:28 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug