Fix the !ENABLE(SVG_FONTS) build https://bugs.webkit.org/show_bug.cgi?id=130193

Patch by Zsolt Borbely <borbezs@inf.u-szeged.hu> on 2014-03-14
Reviewed by Dirk Schulze.

Add missing ENABLE(SVG_FONTS) guards for createGlyphToPathTranslator() function
in SVGTextRunRenderingContext.h and TextRun.h, because when the SVG_FONTS are
disabled the function is not implemented.

* platform/graphics/TextRun.h:
* rendering/svg/SVGTextRunRenderingContext.h:

Canonical link: https://commits.webkit.org/148201@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165611 268f45cc-cd09-0410-ab3c-d52691b4dbfc